task15/fronten-smth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-something
  name: frontend-something
  namespace: otabek
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-something
  type: NodePort
status:
  loadBalancer: {}
