task15/frontend-smth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-something
  namespace: otabek
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: otabek.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-something
            port:
              number: 80
        path: /
        pathType: Prefix

status:
  loadBalancer: {}
